--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.1",
     "webpack-merge": "^5.7.3",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.1.0",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {}
